# do_recife_chat_crew

./: .env.example  README.md  pyproject.toml
src/do_recife_chat_crew/: crew.py  main.py
src/do_recife_chat_crew/config/: agents.yaml  tasks.yaml
