[project]
name = "do_recife_chat_crew"
version = "0.1.0"
description = "do_recife_chat_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.6",
    "pymongo>=4.17",
]

[project.scripts]
do_recife_chat_crew = "do_recife_chat_crew.main:run"
run_crew = "do_recife_chat_crew.main:run"
train = "do_recife_chat_crew.main:train"
replay = "do_recife_chat_crew.main:replay"
test = "do_recife_chat_crew.main:test"
run_with_trigger = "do_recife_chat_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
